fix: Adjust opinions slider styles for improved layout and spacing on mobile

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -204,7 +204,7 @@
         .sliderTitle {
             max-width: 90%;
             margin-left: 10px;
-            margin-bottom: -40px;
+            margin-bottom: -80px;
 
             font-size: 32px;
             font-weight: 700;
@@ -223,7 +223,7 @@
             justify-content: center;
 
             width: 100%;
-            height: 300px;
+            height: 350px;
 
             overflow: hidden;
 
@@ -343,7 +343,7 @@
         flex-direction: column;
         align-items: center;
 
-        margin-top: 70px;
+        margin-top: 0px;
 
         .couponTitle {
             margin-left: 10px;
